WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120268
[WebKit2] Offsets for WKBundlePageLoaderClient in APIClientTraits are wrong
https://bugs.webkit.org/show_bug.cgi?id=120268
Summary
[WebKit2] Offsets for WKBundlePageLoaderClient in APIClientTraits are wrong
Carlos Garcia Campos
Reported
2013-08-25 02:20:55 PDT
In
r129810
a new offset was added for didLayout, but the offset of registerIntentServiceForFrame was added instead. Since then all other offsets look wrong because the last offset of the previous version is used instead of the first offset of the current version.
Attachments
Patch
(1.55 KB, patch)
2013-08-25 02:24 PDT
,
Carlos Garcia Campos
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-08-25 02:24:10 PDT
Created
attachment 209580
[details]
Patch I think this will fix the unit tests currently failing in mac
Zan Dobersek
Comment 2
2013-08-25 12:04:50 PDT
I can confirm the patch fixes the unit tests on the GTK port.
Carlos Garcia Campos
Comment 3
2013-08-26 08:01:44 PDT
Committed
r154602
: <
http://trac.webkit.org/changeset/154602
>
Alexey Proskuryakov
Comment 4
2013-08-26 09:40:52 PDT
What were the tests failing on Mac? I'm puzzled because this fixed a year old regression, did we have those tests failing for a year?
Carlos Garcia Campos
Comment 5
2013-08-26 11:19:47 PDT
(In reply to
comment #4
)
> What were the tests failing on Mac? I'm puzzled because this fixed a year old regression, did we have those tests failing for a year?
I think it only affected to clients using a specific version of the API, versions < 6, the test failing were using version 6, and they started to fail when version 7 was added.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug