[WebKit2] Offsets for WKBundlePageLoaderClient in APIClientTraits are wrong https://bugs.webkit.org/show_bug.cgi?id=120268

Reviewed by Anders Carlsson.

* Shared/APIClientTraits.cpp: Use always the first member of every
version as the offset of the version.

Canonical link: https://commits.webkit.org/138256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154602 268f45cc-cd09-0410-ab3c-d52691b4dbfc